Fixed spacing issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -118,4 +118,9 @@ hr {
   .logo {
     text-align: center;
   }
+
+  .footer-text {
+    text-align: center;
+    float: none;
+  }
 }
